fixed carousel jumping

--- a/landings/css/landing.css
+++ b/landings/css/landing.css
@@ -260,10 +260,11 @@ ul {
 #recommendations .carousel-open:checked + .carousel-item {
   position: static;
   opacity: 100;
+  height: auto;
 }
 
 #recommendations .carousel-item {
-  position: absolute;
+  height: 0;
   opacity: 0;
   -webkit-transition: opacity 0.6s ease-out;
   transition: opacity 0.6s ease-out;
